--- a/src/app/components/approvalstatus/approvalstatus.component.css
+++ b/src/app/components/approvalstatus/approvalstatus.component.css
@@ -1,25 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
 
-.panel-body{
-  margin-left: 1%;
-  margin-right: 2%;
-}
-thead{
-  background-color: rgb(85, 14, 14);
-  padding: 10px 5px 10px 5px;
-}
-table, td{
+
+/* table, td{
   text-align: center;
   align-items: center;
   vertical-align: middle;
 }
 table, td, tr{
   border: 1px solid rgb(163, 161, 161);
-  font-family: serif;
-  font-weight: bold;
-  font-style: normal;
-  font-size: large;
+  font-family: Verdana, sans-serif;
+  font-size: 16px;
+  width: 60%;
 }
 
 th{
@@ -34,7 +26,7 @@ th{
 td{
   text-transform:none;
   padding: 10px;
-}
+} */
 .accepted{
   border: 1px solid black;
   border-radius: 10px;
@@ -71,5 +63,52 @@ td{
 }
 .headercolor
 {
-  background-color: rgb(3, 70, 3);
+  background-color: rgb(93, 7, 93);
+  padding: 2px;
+}
+
+.container td {
+  font-weight: normal;
+  font-size: 1em;
+-webkit-box-shadow: 0 2px 2px -2px #0E1119;
+   -moz-box-shadow: 0 2px 2px -2px #0E1119;
+        box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.container {
+  text-align: center;
+  overflow: hidden;
+  width: 70%;
+  margin: 0 auto;
+display: table;
+ padding: 6px;
+ border-radius: 10px;
+ box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.container td, .container th {
+  padding-bottom: 2%;
+  padding-top: 2%;
+}
+
+/* Background-color of the odd rows */
+.container tr:nth-child(odd) {
+  background-color: #e9dbe9;
+}
+
+/* Background-color of the even rows */
+.container tr:nth-child(even) {
+  background-color:  #d3c3d3;
+}
+
+.container th {
+  background-color: rgb(50, 4, 50);
+  color: white;
+  font-weight: bold;
+}
+
+
+@media (max-width: 800px) {
+.container td:nth-child(4),
+.container th:nth-child(4) { display: none; }
 }
