--- a/src/app/components/addcourse/addcourse.component.html
+++ b/src/app/components/addcourse/addcourse.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>
 
-<div class="container register">
+<div class="container register" style="margin-top: 10%;">
     <div class="row">
         <div class="col-md-9 register-right">
             <div class="tab-content" id="myTabContent">
@@ -81,5 +80,3 @@
         </div>
     </div>
 </div>		
-
-<app-footer></app-footer>
