--- a/src/app/components/registration/registration.component.css
+++ b/src/app/components/registration/registration.component.css
@@ -26,8 +26,8 @@
     border: none;
     border-radius: 1.5rem;
     padding: 1%;
-    border: 1px solid #440707;
-    color: #440707;
+    border: 1px solid rgb(37, 7, 7);
+    color: rgb(37, 7, 7);
     font-weight: 600;
     font-size: 20px;
     width: 30%;
