user and professors lists

--- a/src/app/components/professorlist/professorlist.component.html
+++ b/src/app/components/professorlist/professorlist.component.html
@@ -1,9 +1,34 @@
-<app-header></app-header>
 
-<div class="heading-text"><b>Professor List</b></div>
+<div class="heading-text" style="margin-top: 10%;  margin-bottom: 10%;"><b>Professor List</b></div>
 <div class="row">
-        <div *ngFor="let professor of professorlist | async" class="col-4 card" id="bloodCards">
-         <div class="img-block">
+        <div *ngFor="let professor of professorlist | async"  id="bloodCards">
+        <div class="column">
+            <a><img class="bloodimg" [src]="'assets/img/maleuser.png'" width="140" height="140"></a>    
+        </div>  
+        <div class="column"> 
+        <div class="card-block">
+            <div class="text"><b class="element" style="font-family: cursive; font-size: 22px;"> {{professor.professorname}} </b>  <small style="font-weight: bold;"> ({{professor.professorid}}) </small></div>
+            <br>
+            <div class="text"><b class="element"> University: </b>  {{professor.institutionname}} </div>
+            <div class="text"><b class="element"> Department: </b>  {{professor.department}} </div>
+            <div class="text"><b class="element"> Years of experience: </b>  {{professor.experience}} </div>
+            <div class="text"><b class="element"> Academic Rank: </b>  {{professor.degreecompleted}} </div>
+            <div class="text"><b class="element"> Phone number: </b>  {{professor.mobile}} </div>
+            <div class="text"><b class="element"> Email: </b> {{professor.email}}</div>
+            <br>
+        </div>
+
+        <div *ngIf="professor.status === 'accept'">
+            <div class="status-btn">Approved Professor</div>
+        </div>
+        <div *ngIf="professor.status === 'reject'" >
+            <div class="status-btn2">Rejected</div>
+        </div>
+        <div *ngIf="professor.status === 'false'" >
+            <div class="status-btn1">Approval Pending</div>
+        </div>
+        </div>
+         <!-- <div class="img-block">
             <div class="circle">
                 <img *ngIf="professor.gender === 'Male' || professor.gender === 'male'"  class="bloodimg" [src]="'assets/img/maleprofessor.png'" width="120" height="120">
                 <img *ngIf="professor.gender === 'Female' || professor.gender === 'female'"  class="bloodimg" [src]="'assets/img/femaleprofessor.png'" width="120" height="120">
@@ -27,9 +52,7 @@
             </div>
             <div *ngIf="professor.status === 'false'" >
                 <div class="status-btn1">Approval Pending</div>
-            </div>
+            </div> -->
         </div>
     </div>
-</div>
 <br><br><br>
-<app-footer></app-footer>
