--- a/src/app/components/professorprofile/professorprofile.component.css
+++ b/src/app/components/professorprofile/professorprofile.component.css
@@ -186,3 +186,22 @@ align-content: left;
   display: table;
   clear: both;
 }
+
+#profilecard
+{
+  margin-left: 30%;
+  margin-top: 10%;
+	margin-bottom: 10%;
+}
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
