--- a/src/app/components/professorlist/professorlist.component.css
+++ b/src/app/components/professorlist/professorlist.component.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Aladin&family=Merienda+One&family=Staatliches&display=swap');
 
 .row
@@ -23,44 +24,65 @@
   }
 .card-block
 {
-  margin-top: 2%;
-  margin-left: 10%;
+  margin-top: -33%;
+  margin-left: 40%;
+  margin-bottom: 6%;
 }
 .text{
   font-family: serif;
-  font-size: larger;
   font-weight: bolder;
-  margin-bottom: 1%;
 }
 #searchtxt
 {
   width: 20%;
   float: right;
 }
-.img-block
-{
-    width: 100.5%;
-    height: 180px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-color: #440707;
+.img-block{
+    width: 40%;
+    height: 200px;
+    border-radius: 15px;
+    background-color: white;
 }
 .circle{
-    background-color: rgb(253, 255, 138);
+    background-color: rgb(22, 121, 72);
     margin-left: auto;
     margin-right: auto;
     align-content: center;
-    margin-top: 5%;
+    margin-top: auto;
     margin-bottom: auto;
     border-radius: 50%;
-    width: 40%;
-    height: 80%;
+    width: 50%;
+    height: 50%;
 }
 .bloodimg
 {
-    margin-left: 17%;
-    margin-top: 3%;
+    margin-left: 13%;
+    margin-top: 8%;
 }
+.heading-text
+{
+    font-weight: bolder;
+    font-size: 40px;
+    margin-top: 1%;
+    color: #440707;
+    font-family: 'Aladin', cursive;
+    letter-spacing: 1px;
+    margin-left: 45%;
+}
+
+.bloodimg
+{
+  float: left;
+  margin-top: 3%;
+  margin-right: 3%;
+}
+.card-block
+{
+margin-top: 3%;
+margin-bottom: 3%;
+}
+
+
 .status-btn
 {
     padding: 4px 30px 5px 30px;
@@ -102,41 +124,4 @@
     margin-top: 4%;
     margin-left: 20%;
     margin-bottom: 4%;
-}
-.heading-text
-{
-    font-weight: bolder;
-    font-size: 40px;
-    margin-top: 2%;
-    color: darkgreen;
-    font-family: 'Aladin', cursive;
-    letter-spacing: 1px;
-    margin-left: 42%;
-}
-.subheading-text
-{
-    font-weight: bolder;
-    font-size: 25px;
-    color: green;
-    font-family: 'Aladin', cursive;
-    letter-spacing: 1px;
-    margin-left: 35%;
-    margin-bottom: 1%;
-}
-.date-cover{
-  border-radius: 10px;
-  background-color: rgb(10, 15, 68);
-  padding: 5px 10px 5px 10px;
-  color: white;
-  width: 30%;
-  font-weight: bolder;
-}
-.slotcover
-{
-  border-radius: 10px;
-  background-color: #440707;
-  padding: 5px 10px 5px 10px;
-  color: white;
-  width: 30%;
-  font-weight: bolder;
 }
