--- a/src/app/components/userlist/userlist.component.css
+++ b/src/app/components/userlist/userlist.component.css
@@ -8,10 +8,11 @@
   #bloodCards
   {
     margin-right: 5%;
-    margin-bottom: 4%;
-    width: 40%;
+    margin-bottom: 5%;
     border-radius: 15px;
     padding: 0px;
+    width: 40%;
+    height: 60%;
     transition: transform .2s;
     box-shadow: 5px 5px 25px 8px rgb(147, 158, 147);
   }
@@ -66,4 +67,16 @@
     font-family: 'Aladin', cursive;
     letter-spacing: 1px;
     margin-left: 45%;
+}
+
+.bloodimg
+{
+  float: left;
+  margin-top: 3%;
+  margin-right: 3%;
+}
+.card-block
+{
+margin-top: 3%;
+margin-bottom: 3%;
 }
