--- a/src/app/components/userlist/userlist.component.html
+++ b/src/app/components/userlist/userlist.component.html
@@ -1,22 +1,23 @@
-<app-header></app-header>
 
 <div class="heading-text" style="margin-top: 10%; margin-bottom: 10%;"><b>User List</b></div>
+<div id="profilecard">
 <div class="row">
-    <div  *ngFor="let user of users | async" class="col-4 card" style="height: 200px;" id="bloodCards">
-        <div class="img-block">
-            <div class="circle">
-                <img *ngIf="user.gender === 'Male' || user.gender === 'male'"  class="bloodimg" [src]="'assets/img/maleuser.png'" width="100" height="100">
-                <img *ngIf="user.gender === 'Female' || user.gender === 'female'"  class="bloodimg" [src]="'assets/img/femaleuser.png'" width="100" height="120">
-            </div>
-        </div>
+    <div  *ngFor="let user of users | async"  style="height: 200px;" id="bloodCards">>
+        <div class="column">
+            <a><img class="bloodimg" [src]="'assets/img/maleuser.png'" width="140" height="140"></a>    
+        </div>  
+        <div class="column"> 
         <div class="card-block">
-            <div class="text"><b> Username: {{user.username}} </b></div>
-            <div class="text"><b>Id: </b><b style="color: darkblue;"> {{user.userid}} </b></div>
-            <div class="text"><b> Email: {{user.email}} </b></div>
-            <div class="text"><b> University: {{user.profession}} </b></div>
-            <div class="text"><b> Phone number: {{user.mobile}} </b></div>
+            <div class="text"><b class="element" style="font-family: cursive; font-size: 22px;"> {{user.username}} </b>  <small style="font-weight: bold;"> ({{user.userid}}) </small></div>
+            <br>
+            <div class="text"><b class="element"> Phone number: </b>  {{user.mobile}} </div>
+            <div class="text"><b class="element"> University: </b> {{user.profession}} </div>
+            <div class="text"><b class="element"> Email: </b> {{user.email}}</div>
+            <br>
+        </div>
         </div>
     </div>
+</div>
   </div>
 
 <br><br><br>
