--- a/src/app/components/professorlist/professorlist.component.css
+++ b/src/app/components/professorlist/professorlist.component.css
@@ -1,10 +1,14 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Aladin&family=Merienda+One&family=Staatliches&display=swap');
 
 .row
   {
     margin-left: 10%;
     margin-top: 3%;
+  }
+  .column {
+    float: left;
+    width: 50%;
+    padding: 2px;
   }
   #bloodCards
   {
@@ -17,21 +21,12 @@
     transition: transform .2s;
     box-shadow: 5px 5px 25px 8px rgb(147, 158, 147);
   }
-  #bloodCards:hover
+
+  /* #bloodCards:hover
   {
     transform: scale(1.05);
     cursor: pointer;
-  }
-.card-block
-{
-  margin-top: -33%;
-  margin-left: 40%;
-  margin-bottom: 6%;
-}
-.text{
-  font-family: serif;
-  font-weight: bolder;
-}
+  } */
 #searchtxt
 {
   width: 20%;
@@ -81,47 +76,8 @@
 margin-top: 3%;
 margin-bottom: 3%;
 }
-
-
-.status-btn
-{
-    padding: 4px 30px 5px 30px;
-    background-color: #440707;
-    color: white;
-    border-radius: 15px;
-    text-align: center;
-    vertical-align: middle;
-    width: 240px;
-    font-weight: bold;
-    margin-top: 4%;
-    margin-left: 15%;
-    margin-bottom: 4%;
-}
-.status-btn1
-{
-    background-color: #440707;
-    padding: 4px 30px 5px 30px;
-    color: white;
-    vertical-align: middle;
-    border-radius: 15px;
-    width: 200px;
-    text-align: center;
-    font-weight: bold;
-    margin-top: 4%;
-    margin-left: 20%;
-    margin-bottom: 4%;
-}
-.status-btn2
-{
-    background-color: #440707;
-    padding: 4px 30px 5px 30px;
-    color: white;
-    vertical-align: middle;
-    text-align: center;
-    border-radius: 15px;
-    width: 200px;
-    font-weight: bold;
-    margin-top: 4%;
-    margin-left: 20%;
-    margin-bottom: 4%;
+.text{
+font-family: verdana;
+font-size: 14px;
+margin-top: 1.5%;
 }
