--- a/src/app/components/userlist/userlist.component.css
+++ b/src/app/components/userlist/userlist.component.css
@@ -5,6 +5,11 @@
     margin-left: 10%;
     margin-top: 3%;
   }
+  .column {
+    float: left;
+    width: 50%;
+    padding: 2px;
+  }
   #bloodCards
   {
     margin-right: 5%;
@@ -16,21 +21,12 @@
     transition: transform .2s;
     box-shadow: 5px 5px 25px 8px rgb(147, 158, 147);
   }
-  #bloodCards:hover
+
+  /* #bloodCards:hover
   {
     transform: scale(1.05);
     cursor: pointer;
-  }
-.card-block
-{
-  margin-top: -33%;
-  margin-left: 40%;
-  margin-bottom: 6%;
-}
-.text{
-  font-family: serif;
-  font-weight: bolder;
-}
+  } */
 #searchtxt
 {
   width: 20%;
@@ -79,4 +75,9 @@
 {
 margin-top: 3%;
 margin-bottom: 3%;
+}
+.text{
+font-family: verdana;
+font-size: 14px;
+margin-top: 1.5%;
 }
