--- a/src/app/components/userlist/userlist.component.html
+++ b/src/app/components/userlist/userlist.component.html
@@ -2,7 +2,7 @@
 <div class="heading-text" style="margin-top: 10%; margin-bottom: 10%;"><b>User List</b></div>
 <div id="profilecard">
 <div class="row">
-    <div  *ngFor="let user of users | async"  style="height: 200px;" id="bloodCards">>
+    <div  *ngFor="let user of users | async"  style="height: 200px;" id="bloodCards">
         <div class="column">
             <a><img class="bloodimg" [src]="'assets/img/maleuser.png'" width="140" height="140"></a>    
         </div>  
