--- a/src/app/components/addchapter/addchapter.component.html
+++ b/src/app/components/addchapter/addchapter.component.html
@@ -1,8 +1,6 @@
-<app-header></app-header>
 
-<div class="container">
+<div class="container" style="margin-top: 10%;">
   <h2 class="textual"><i class="fa fa-book"></i> New Chapters </h2>
-  <small style="color:darkgreen; margin-left: 10%; font-weight: bold;">On adding new chapters, your course will appear more meaningful to learn</small>
   <form #addChapterform="ngForm" (ngSubmit)="addChapters()">
       
       <div class="form-group">
@@ -29,7 +27,7 @@
       (change)="onFileSelected1($event)" #fileUpload>
 
 
-      <div id="chapter1btn" style="width: 12%; cursor: pointer; margin-top: 8px; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+      <div id="chapter1btn" style="width: 12%; cursor: pointer; margin-top: 8px; background-color: rgb(15, 28, 130); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
     </div>
 
       <div id="chapter2">
@@ -41,7 +39,7 @@
       <input type="file" class="file-input"
       (change)="onFileSelected2($event)" #fileUpload>
 
-      <div id="chapter2btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+      <div id="chapter2btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(15, 28, 130);color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
       <div id="remove2btn" style="width: 15%; margin-top: -4.5%; margin-left: 14%; cursor: pointer; background-color: rgb(201, 13, 13); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-trash"></i> Remove</div>  
     </div>
 
@@ -54,7 +52,7 @@
         <input type="file" class="file-input"
         (change)="onFileSelected3($event)" #fileUpload>
 
-        <div id="chapter3btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+        <div id="chapter3btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(15, 28, 130); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
         <div id="remove3btn" style="width: 15%; margin-top: -4.5%; margin-left: 14%; cursor: pointer; background-color: rgb(201, 13, 13); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-trash"></i> Remove</div>  
       </div>
 
@@ -67,7 +65,7 @@
         <input type="file" class="file-input"
         (change)="onFileSelected4($event)" #fileUpload>
 
-        <div id="chapter4btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+        <div id="chapter4btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(15, 28, 130); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
         <div id="remove4btn" style="width: 15%; margin-top: -4.5%; margin-left: 14%; cursor: pointer; background-color: rgb(201, 13, 13); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-trash"></i> Remove</div>  
       </div>
 
@@ -80,7 +78,7 @@
         <input type="file" class="file-input"
         (change)="onFileSelected5($event)" #fileUpload>
 
-        <div id="chapter5btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+        <div id="chapter5btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(15, 28, 130); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
         <div id="remove5btn" style="width: 15%; margin-top: -4.5%; margin-left: 14%; cursor: pointer; background-color: rgb(201, 13, 13); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-trash"></i> Remove</div>  
       </div>
 
@@ -93,7 +91,7 @@
         <input type="file" class="file-input"
         (change)="onFileSelected6($event)" #fileUpload>
 
-        <div id="chapter6btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+        <div id="chapter6btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(15, 28, 130); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
         <div id="remove6btn" style="width: 15%; margin-top: -4.5%; margin-left: 14%; cursor: pointer; background-color: rgb(201, 13, 13); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-trash"></i> Remove</div>  
       </div>
 
@@ -106,7 +104,7 @@
         <input type="file" class="file-input"
         (change)="onFileSelected7($event)" #fileUpload>
 
-        <div id="chapter7btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+        <div id="chapter7btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(15, 28, 130); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
         <div id="remove7btn" style="width: 15%; margin-top: -4.5%; margin-left: 14%; cursor: pointer; background-color: rgb(201, 13, 13); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-trash"></i> Remove</div>  
       </div>
 
@@ -116,13 +114,10 @@
           <input type="text" class="form-control" placeholder="Enter material name" id="chapter8nametxt" name="chapter8name" [(ngModel)]="chapter.chapter8name">
         </div>
 
-        <div id="chapter8btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(13, 68, 65); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
+        <div id="chapter8btn" style="width: 12%; margin-top: 8px; cursor: pointer; background-color: rgb(15, 28, 130); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-plus"></i> Add</div>
         <div id="remove8btn" style="width: 15%; margin-top: -4.5%; margin-left: 14%; cursor: pointer; background-color: rgb(201, 13, 13); color: white; font-weight: bold; border: none; font-size: small; outline: none; padding: 5px 15px 5px 15px; border-radius: 15px;"><i class="fa fa-trash"></i> Remove</div>  
       </div>
 
     <button style="margin-top: 15px;" [disabled]="addChapterform.form.invalid" type="submit" class="btn registerbtn"><i class="fa fa-plus"></i>&nbsp; Add Chapter</button>
   </form>
 </div>
-
-<br><br><br><br>
-<app-footer></app-footer>
