--- a/src/app/components/userlist/userlist.component.css
+++ b/src/app/components/userlist/userlist.component.css
@@ -62,7 +62,7 @@
     color: #440707;
     font-family: 'Aladin', cursive;
     letter-spacing: 1px;
-    margin-left: 45%;
+    text-align: center;
 }
 
 .bloodimg
