--- a/src/app/components/addquiz/addquiz.component.css
+++ b/src/app/components/addquiz/addquiz.component.css
@@ -26,8 +26,8 @@
     border: none;
     border-radius: 1.5rem;
     padding: 1%;
-    border: 1px solid #440707;
-    color: #440707;
+    border: 1px solid rgb(37, 7, 7);
+    color: rgb(37, 7, 7);
     font-weight: 600;
     font-size: 20px;
     width: 30%;
@@ -53,7 +53,7 @@
     color: #0a3d3b;
 }
 .btnRegister:hover{
-    background: #440707;
+    background: rgb(37, 7, 7);
     color: #fff;
     cursor: pointer;
 }
@@ -102,7 +102,7 @@
     letter-spacing: 1.5px;
     margin-bottom: -15%;
     font-family: 'Aladin', cursive;
-    color: #413613;
+    color: rgb(37, 7, 7);
 }
 #home-tab
 {
