--- a/src/app/components/addquiz/addquiz.component.html
+++ b/src/app/components/addquiz/addquiz.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>
 
-<div class="container register">
+<div class="container register" style="margin-top: 10%;">
     <div class="row">
         <div class="col-md-9 register-right">
             <div class="tab-content" id="myTabContent">
@@ -28,9 +27,9 @@
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <a (click)="addQuestion()" style="margin-right: 2%; border: none;" class="btn btn-primary">Add
-                            Question</a>
+                    <div class="center">
+                        <button (click)="addQuestion()" style="margin-right: 2%; border: none;" class="btn btn-primary">Add
+                            Question</button>
                         <div *ngFor="let question of questions; index as i">
                             <div class="row register-form">
                                 <div class="col-md-6">
@@ -64,5 +63,3 @@
         </div>
     </div>
 </div>		
-
-<app-footer></app-footer>
