--- a/src/app/components/courselist/courselist.component.css
+++ b/src/app/components/courselist/courselist.component.css
@@ -1,4 +1,4 @@
-.headtext
+/* .headtext
 {
    margin-bottom: 3%; 
    font-weight: bolder; 
@@ -30,4 +30,59 @@
  {
    color: rgb(9, 40, 41);
    background-color: white;
- }
+ } */
+
+ .heading-text
+{
+    font-weight: bolder;
+    font-size: 40px;
+    margin-top: 1%;
+    color: #440707;
+    font-family: 'Aladin', cursive;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+.text {
+   font-family: verdana;
+   font-size: 14px;
+   text-align: center;
+   display: flex;
+   align-items: center; /* Vertically center content */
+   justify-content: center; /* Horizontally center content */
+   height: 100%; /* Ensure the text takes up the full height of the parent */
+}
+
+
+.course-type {
+   position: relative; /* Required for absolute positioning of the caret */
+   border-radius: 15px;
+   padding: 30px;
+   padding-left: 50px;
+   max-width: 600px;
+   height: 50px;
+   transition: transform .2s;
+   box-shadow: 5px 5px 25px 8px rgb(147, 158, 147);
+   display: flex; /* Ensure flex properties work */
+   align-items: center; /* Vertically center content */
+   justify-content: space-between; /* Horizontally distribute content */
+   color: #6c1466;
+   background-color: 
+   rgb(229, 213, 233);
+   margin-top: 2%;
+   margin-bottom: 2%;
+}
+
+.course-type:hover {
+   transform: scale(1.05);
+   cursor: pointer;
+}
+
+.fa-caret-down {
+   text-align: right;
+   font-size: 30px;
+}
+.fa-caret-up {
+   text-align: right;
+   font-size: 30px;
+}
