--- a/src/app/components/fullcourse/fullcourse.component.html
+++ b/src/app/components/fullcourse/fullcourse.component.html
@@ -1,13 +1,28 @@
-<app-header></app-header>
-<div class="continer">
-    <div>
-    <div style="font-weight: bolder; color: darkgreen; font-size: 35px; margin-bottom: 2%;">Welcome to {{courseName}} course 👋 </div>
-    <div class="row">
-        <div class="col-md-8">
-            <youtube-player style="margin-right: 5%;" id="player" [videoId]="video" suggestedQuality="highres" [height]="380" [width]="640"></youtube-player>
-            
+<div class="heading-text" style="margin-top: 10%; margin-bottom: 5%;"><b>Welcome to {{courseName}} course 👋 </b></div>
+<div class="row">
+    <div class="column" style="margin-bottom: 5%;">
+
+     <div class="card-text" *ngFor="let course of courselist | async">
+        <p style="font-size: 30px; font-weight: bold; color: #6c1466;">
+            Description:
+        </p>
+        <hr style="width: 20%; height: 2px;">
+        <p>{{course.description}}
+        </p>
+        <br>
+        <p style="font-size: 30px; font-weight: bold; color: #6c1466;">
+            Overview:
+        </p>
+        <hr style="width: 20%; height: 2px;">
+        <p style="font-size: 16px;"><b>Level: </b> {{course.skilllevel}}</p>
+        <p style="font-size: 16px;"><b>Language :</b> {{course.language}}</p>
+        <p style="font-size: 16px;"><b>Course Type : </b>{{course.coursetype}} contents</p>
+        <p style="font-size: 16px;"><b> Instructor : </b>{{course.instructorname}} - {{course.instructorinstitution}}</p>
+        <p style="font-size: 16px;"><b> Enrolled Date : </b>{{course.enrolleddate}}</p>
+        <p style="font-size: 16px;"> <b>Learners : </b>{{course.enrolledcount}} learners enrolled previously</p>
         </div>
-        <div class="col-md-8">
+    <!-- <div class="row"> -->
+        <!-- <div class="col-md-8">
             
     <div class="chapter-list" *ngFor="let chapter of chapterlist">
         <div style="font-weight: bold; font-size: large; align-items: center; color: darkred;"><i class="fa fa-list"></i> Course Contents</div>
@@ -71,81 +86,60 @@
         <hr *ngIf="chapter.chapter8name !== ''">
     </div>
 
-    </div>
+    </div> -->
 
-    </div> 
-</div>
-<div class="sub-container">
-    <div class="sub-btns">
-        <button id="overview-btn" (click)="openOverview(); ceva()" class="btn btn-info">Overview</button>
-        <button id="qa-btn" (click)="openQandA()" class="btn btn-info">Q&A</button>
-        <button id="downloads-btn" (click)="openDownloads()" class="btn btn-info">Downloads</button>
-        <button id="notes-btn" (click)="openNotes()" class="btn btn-info">Notes</button>
-        <button id="announcements-btn" (click)="openAnnouncements()" class="btn btn-info">Announcements</button>
-        <hr>
-    </div>
-    <div id="overview" class="descriptions" *ngFor="let course of courselist | async">
-        <strong style="font-weight: bolder; font-size: 25px;">About this Course</strong>
-        <h3 class="card-title text-left" style="margin-top: 1.5%; font-weight: normal; font-size: 21px;">{{course.coursename}}</h3>
-        <h6 class="text-center" style="margin-left: 0; padding: 5px 20px 5px 20px; background-color: darkgoldenrod; border-radius: 5px; font-weight: bold; margin-bottom: 2%; margin-top: 1%; display: inline-block; color: white;">{{course.courseid}}</h6>
-        <hr style="margin-top: 2%; margin-bottom: 2%;">
-
-        <p class="card-text"><b style="color: darkblue; font-size: large; margin-bottom: 1%;">{{course.description}}</b></p>
-        <hr style="margin-top: 2%; margin-bottom: 2%;">
-
-        <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">Level : </b><b style="margin-left: 12%">{{course.skilllevel}}</b></div>
-        <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">Language : </b><b style="margin-left: 7%">{{course.language}}</b></div>
-        <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">Course Type : </b><b style="margin-left: 4.2%">{{course.coursetype}} contents</b></div>
-        <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">Instructor : </b><b style="margin-left: 7%">{{course.instructorname}} - {{course.instructorinstitution}}</b></div>
-        <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">Enrolled Date : </b><b style="margin-left: 3%">{{course.enrolleddate}}</b></div>
-        <div><b style="color: darkred; font-size: large; margin-bottom: 1%;">Learners : </b><b style="margin-left: 8.5%">{{course.enrolledcount}} learners enrolled previously</b></div>
-        <hr style="margin-top: 2%; margin-bottom: 2%;">
-
-        <div>
-            <strong style="font-size: large;">Features </strong>
-            <label style="font-weight: large; margin-left: 10%;">Available on <span style="color: blueviolet; font-weight: bold;">Android</span> and <span style="color: blueviolet; font-weight: bold;">iOS</span></label>
-        </div>
-        <hr style="margin-top: 2%; margin-bottom: 2%;">
-
-        <div>
-            <strong style="font-size: large;">Certificate </strong>
-            <label style="font-weight: large; margin-left: 10%;">Get the certificate by completing entire course</label>
-            <br>
-            <div class="certificate">Certificate</div>
-        </div>
-        <hr style="margin-top: 2%; margin-bottom: 2%;">
-    </div>
-    <div id="qa" style="padding-bottom: 5%;" class="descriptions">
-        <div style="display: inline-block; color: white; font-weight: bolder; background-color: black; padding: 1.1%; margin-left: 66%; border-radius: 5px; cursor: pointer;"><i class="fa fa-search"></i></div>
-        <input class="form-control" id="searchtxt" type="text" name="searchQA" placeholder="search all course questions..."/>
-        <strong id="newQA" (click)="newQuestion()" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 4%; cursor: pointer;">Ask a New Question ?</strong>
-        <textarea type="text" id="questions" rows = "4" class="form-control" placeholder="ask your questions here..."></textarea>
-    </div>
-    <div id="downloads" *ngFor="let chapter of chapterlist" style="padding-bottom: 5%;" class="descriptions">
-        <div id="downloadalert" style="color: darkred; font-size: larger; display: none; font-weight: bolder; margin-top: 5%; margin-bottom: 5%; margin-right: 10%;" *ngIf="chapter.chapter1name === ''">Currently No Resources available for download. Please wait, the Instructor will be adding the Resources while adding the chapters soon here</div>
-        <div *ngIf="chapter.chapter1name !== ''">
-          <strong id="downloadtxt" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 4%; cursor: pointer;">View and download your course related materials here ...</strong>
-          <div style="display: inline-block; width: 100%; margin-top: 5%; margin-bottom: 5%;">
-            <button type="button" class="btn btn-warning btn-sm" style="display: inline-block; margin-right: 5%; border-radius: 10px; font-weight: bolder; font-size: large;" (click)="openDoc()">View Material</button>
-            <button type="button" class="btn btn-success btn-sm" style="display: inline-block; border-radius: 10px; font-weight: bolder; font-size: large;"(click)="downloadPdf()">Download Resource</button>
-          </div>
-          <strong id="downloadtxt" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 5%; cursor: pointer;">For more course materials, contact the Instructor or ADMIN - (Gowthamraj K) gowthamraj692@gmail.com / whatsapp to 9698382306</strong>
-        </div>
-    </div>
-    <div id="notes" style="padding-bottom: 5%;" class="descriptions">
-        <div style="display: inline-block; color: white; font-weight: bolder; background-color: black; padding: 1.1%; margin-left: 66%; border-radius: 5px; cursor: pointer;"><i class="fa fa-search"></i></div>
-        <input class="form-control" id="searchtxt" type="text" name="searchNotes" placeholder="search course notes here..."/>
-        <strong id="newNotes" (click)="newNotes()" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 4%; cursor: pointer;">Create new Note <i style="color: black; font-size: 18px;" class="fa fa-plus-circle"></i></strong>
-        <textarea type="text" id="notestxt" rows = "2" class="form-control" placeholder="add your new notes here..."></textarea>
-        <br><br><strong style="margin-top: 3%; font-weight: normal;">Click the "Create new note" or the "+" button to make your first note.</strong>
-    </div>
-    <div id="announcements" style="display: inline-block; padding: 10%;" class="descriptions">
-        <strong style="font-weight: bolder; font-size: 28px; margin-left: 12%;">No announcements posted yet</strong>
-        <br>
-        <strong style="font-weight: normal; font-size: 18px;">The instructor hasn’t added any announcements to this course yet. Announcements are used to inform you of updates or additions to the course.</strong>
-    </div>
-</div>
+    <!-- </div>  -->
 </div>
 
-<br><br>
-<app-footer></app-footer>
+<div class="column">
+<button class="container course-type" style="border: none;"  (click)="openQandA()">
+    <div class="text"><b class="element" style="font-family: cursive; font-size: 22px;"> Q&A</b></div>
+    <i class="fa fa-caret-down" id="advanced_i" *ngIf="!showQA"></i>
+    <i class="fa fa-caret-up" id="advanced_i" *ngIf="showQA"></i>
+</button>
+<div id="qa" style="padding-bottom: 5%;" class="descriptions">
+    <div style="display: inline-block; color: white; font-weight: bolder; background-color: black; padding: 1.1%; margin-left: 66%; border-radius: 5px; cursor: pointer;"><i class="fa fa-search"></i></div>
+    <input class="form-control" id="searchtxt" type="text" name="searchQA" placeholder="search all course questions..."/>
+    <strong id="newQA" (click)="newQuestion()" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 4%; cursor: pointer;">Ask a New Question ?</strong>
+    <textarea type="text" id="questions" rows = "4" class="form-control" placeholder="ask your questions here..."></textarea>
+</div>
+<button class="container course-type" style="border: none;" (click)="openDownloads()">
+    <div class="text"><b class="element" style="font-family: cursive; font-size: 22px;"> Downloads</b></div>
+    <i class="fa fa-caret-down" id="advanced_i" *ngIf="!showDownloads"></i>
+    <i class="fa fa-caret-up" id="advanced_i" *ngIf="showDownloads"></i>
+</button>
+<div id="downloads" *ngFor="let chapter of chapterlist" style="padding-bottom: 5%;" class="descriptions">
+    <div id="downloadalert" style="color: darkred; font-size: larger; display: none; font-weight: bolder; margin-top: 5%; margin-bottom: 5%; margin-right: 10%;" *ngIf="chapter.chapter1name === ''">Currently No Resources available for download. Please wait, the Instructor will be adding the Resources while adding the chapters soon here</div>
+    <div *ngIf="chapter.chapter1name !== ''">
+      <strong id="downloadtxt" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 4%; cursor: pointer;">View and download your course related materials here ...</strong>
+      <div style="display: inline-block; width: 100%; margin-top: 5%; margin-bottom: 5%;">
+        <button type="button" class="btn btn-warning btn-sm" style="display: inline-block; margin-right: 5%; border-radius: 10px; font-weight: bolder; font-size: large;" (click)="openDoc()">View Material</button>
+        <button type="button" class="btn btn-success btn-sm" style="display: inline-block; border-radius: 10px; font-weight: bolder; font-size: large;"(click)="downloadPdf()">Download Resource</button>
+      </div>
+      <strong id="downloadtxt" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 5%; cursor: pointer;">For more course materials, contact the Instructor or ADMIN - (Gowthamraj K) gowthamraj692@gmail.com / whatsapp to 9698382306</strong>
+    </div>
+</div>
+<button class="container course-type" style="border: none;" (click)="openAnnouncements()">
+    <div class="text"><b class="element" style="font-family: cursive; font-size: 22px;"> Announcements</b></div>
+    <i class="fa fa-caret-down" id="advanced_i" *ngIf="!showAnnouncements"></i>
+    <i class="fa fa-caret-up" id="advanced_i" *ngIf="showAnnouncements"></i>
+</button>
+<div id="announcements" style="display: inline-block; padding: 10%;" class="descriptions">
+    <strong style="font-weight: bolder; font-size: 28px; margin-left: 12%;">No announcements posted yet</strong>
+    <br>
+    <strong style="font-weight: normal; font-size: 18px;">The instructor hasn’t added any announcements to this course yet. Announcements are used to inform you of updates or additions to the course.</strong>
+</div>
+<button class="container course-type" style="border: none;" (click)="openNotes()">
+    <div class="text"><b class="element" style="font-family: cursive; font-size: 22px;"> Notes</b></div>
+    <i class="fa fa-caret-down" id="advanced_i" *ngIf="!showNotes"></i>
+    <i class="fa fa-caret-up" id="advanced_i" *ngIf="showNotes"></i>
+</button>
+<div id="notes" style="padding-bottom: 5%;" class="descriptions">
+    <div style="display: inline-block; color: white; font-weight: bolder; background-color: black; padding: 1.1%; margin-left: 66%; border-radius: 5px; cursor: pointer;"><i class="fa fa-search"></i></div>
+    <input class="form-control" id="searchtxt" type="text" name="searchNotes" placeholder="search course notes here..."/>
+    <strong id="newNotes" (click)="newNotes()" style="font-size: large; font-weight: bolder; color: black; margin-bottom: 4%; cursor: pointer;">Create new Note <i style="color: black; font-size: 18px;" class="fa fa-plus-circle"></i></strong>
+    <textarea type="text" id="notestxt" rows = "2" class="form-control" placeholder="add your new notes here..."></textarea>
+    <br><br><strong style="margin-top: 3%; font-weight: normal;">Click the "Create new note" or the "+" button to make your first note.</strong>
+</div>
+</div>
+</div>
