--- a/src/app/components/professorlist/professorlist.component.css
+++ b/src/app/components/professorlist/professorlist.component.css
@@ -9,6 +9,10 @@
     float: left;
     width: 50%;
     padding: 2px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 100%;
   }
   #bloodCards
   {
@@ -62,7 +66,7 @@
     color: #440707;
     font-family: 'Aladin', cursive;
     letter-spacing: 1px;
-    margin-left: 45%;
+    text-align: center;
 }
 
 .bloodimg
@@ -73,11 +77,51 @@
 }
 .card-block
 {
-margin-top: 3%;
-margin-bottom: 3%;
+  flex: 1;
 }
 .text{
 font-family: verdana;
 font-size: 14px;
 margin-top: 1.5%;
+}
+
+.status-btn
+{
+    padding: 4px 30px 5px 30px;
+    background-color: #440707;
+    color: white;
+    border-radius: 15px;
+    text-align: center;
+    vertical-align: middle;
+    width: 240px;
+    font-weight: bold;
+
+}
+.status-btn1
+{
+    background-color: #440707;
+    padding: 4px 30px 5px 30px;
+    color: white;
+    vertical-align: middle;
+    border-radius: 15px;
+    width: 200px;
+    text-align: center;
+    font-weight: bold;
+}
+.status-btn2
+{
+    background-color: #440707;
+    padding: 4px 30px 5px 30px;
+    color: white;
+    vertical-align: middle;
+    text-align: center;
+    border-radius: 15px;
+    width: 200px;
+    font-weight: bold;
+
+}
+
+.status {
+  position: absolute;
+  bottom: 8%;
 }
