--- a/src/app/components/professorlist/professorlist.component.html
+++ b/src/app/components/professorlist/professorlist.component.html
@@ -1,7 +1,7 @@
 
 <div class="heading-text" style="margin-top: 10%;  margin-bottom: 10%;"><b>Professor List</b></div>
 <div class="row">
-        <div *ngFor="let professor of professorlist | async"  id="bloodCards">
+        <div *ngFor="let professor of professorlist | async"  id="bloodCards" style="height: 400px;">
         <div class="column">
             <a><img class="bloodimg" [src]="'assets/img/maleuser.png'" width="140" height="140"></a>    
         </div>  
@@ -18,41 +18,12 @@
             <br>
         </div>
 
-        <div *ngIf="professor.status === 'accept'">
-            <div class="status-btn">Approved Professor</div>
-        </div>
-        <div *ngIf="professor.status === 'reject'" >
-            <div class="status-btn2">Rejected</div>
-        </div>
-        <div *ngIf="professor.status === 'false'" >
-            <div class="status-btn1">Approval Pending</div>
+        <div class="status">
+            <div *ngIf="professor.status === 'accept'" class="status-btn">Approved Professor</div>
+            <div *ngIf="professor.status === 'reject'" class="status-btn2">Rejected</div>
+            <div *ngIf="professor.status === 'false'" class="status-btn1">Approval Pending</div>
         </div>
         </div>
-         <!-- <div class="img-block">
-            <div class="circle">
-                <img *ngIf="professor.gender === 'Male' || professor.gender === 'male'"  class="bloodimg" [src]="'assets/img/maleprofessor.png'" width="120" height="120">
-                <img *ngIf="professor.gender === 'Female' || professor.gender === 'female'"  class="bloodimg" [src]="'assets/img/femaleprofessor.png'" width="120" height="120">
-            </div>
-        </div>
-        <div class="card-block">
-            <div class="text"><b style="color: darkblue">Professor ID : </b><b style="color: darkred;"><small class="date-cover">{{professor.professorid}}</small></b></div>
-            <div class="text"><b style="color: darkblue">Professor Name : </b><b style="color: darkred;"> {{professor.professorname}} </b></div>
-            <div class="text"><b style="color: darkblue">Degree Completed : </b><b style="color: darkred;"> {{professor.degreecompleted}} </b></div>
-            <div class="text"><b style="color: darkblue">Email : </b><b style="color: darkred;"> {{professor.email}} </b></div>
-            <div class="text"><b style="color: darkblue">Institution Name : </b><b style="color: darkred;"> {{professor.institutionname}} </b></div>
-            <div class="text"><b style="color: darkblue">Department : </b><b style="color: darkred;"> {{professor.department}} </b></div>
-            <div class="text"><b style="color: darkblue">Experience: </b><b style="color: darkred;"> {{professor.experience}} years </b></div>
-            <div class="text"><b style="color: darkblue">Gender : </b><b style="color: darkred;"> {{professor.gender}} </b></div>
-            <div class="text"><b style="color: darkblue">Mobile : </b><b style="color: darkred;"> {{professor.mobile}} </b></div>
-            <div *ngIf="professor.status === 'accept'">
-                <div class="status-btn">Approved Professor</div>
-            </div>
-            <div *ngIf="professor.status === 'reject'" >
-                <div class="status-btn2">Rejected</div>
-            </div>
-            <div *ngIf="professor.status === 'false'" >
-                <div class="status-btn1">Approval Pending</div>
-            </div> -->
         </div>
     </div>
 <br><br><br>
